changed height of color bg on packagesdisplay, still isn't perfect on iPhone5, probably the screen that needs more fixing so far, up to iPhone 6/7/8 is running smoothly

--- a/src/components/Membership/PackagesDisplay/PackagesDisplay.css
+++ b/src/components/Membership/PackagesDisplay/PackagesDisplay.css
@@ -5,6 +5,7 @@
 
 .color-bg {
   background-color: #08726c;
-  height: 105vh;
+  height: 120vh;
   font-family: Raleway;
+  width: 100%;
 }
